--- a/index.html
+++ b/index.html
@@ -1,6 +1,61 @@
 <html>
-    <h1>
+    <body style="background: rgb(238, 237, 237);">
+    <h1 style="color:blue;font-size:50px;text-align: center;">
         Vee's Portfolio
     </h1>
-    <img src="vee.jpg" width="808" height="1076" /> 
+    <table>
+        <tr>
+            <th><img src="vee.jpg" width="379" height="505" /> </th>
+            <th><h2 style="color:blue;font-size:20px;text-align: left;">
+                Professional Summary:
+            </h2> 
+            <p style="text-align: left;font-weight: normal;">
+                A highly motivated Mainframe Specialist with 14+ years of experience in Application development, Database Administration, Infrastructure Engineering and Operations. 
+                A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results.
+            </p>
+            <h2 style="color:blue;font-size:20px;text-align: left;">
+                Education:
+            </h2> 
+            <ul style="text-align: left;font-weight: normal;">
+                <li>Master of Science in Computer Science, Colorado Technical University.</li>
+                <li>Bachelor of Engineering, Electronics & Communication, Visveswaraya Technological University.</li>
+            </ul>
+            <h2 style="color:blue;font-size:20px;text-align: left;">
+                Technical Skills:
+            </h2> 
+            <p style="text-align: left;font-weight: normal;">
+                <Strong>Operating Systems: </Strong>
+                z/OS 1.4 – 2.3, Linux, Windows <br>
+
+                <Strong>Databases: </Strong>
+                Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle<br>
+
+                <Strong>Programming Languages: </Strong>
+                COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML <br>
+
+                <Strong>Middleware: </Strong>
+                MQ, CICS <br>
+
+                <Strong>Replication Products: </Strong>
+                QRep, SQLREP, Golden gate on z <br>
+
+                <Strong>Monitoring Products:</Strong>
+                Splunk, Dynatrace, Omegamon, Apptune, Tivoli Enterprise Portal, IZSME <br>
+
+                <Strong>Other Technologies:</Strong>
+                IBM Db2 Analytics Accelerator, Docker, Kubernetes, ZOWE, zOSMF <br>
+
+                <Strong>Other Tools:</Strong>
+                Topaz, Data Studio, QMF for Workstation/WebSphere, BMC Utilities, IBM Utilities, Xpediter, Control M, Log Master, Service Now, Manage Now <br>
+             </p>
+             <h2 style="color:blue;font-size:20px;text-align: left;">
+                Hobbies:
+            </h2> 
+            <p style="text-align: left;font-weight: normal;">
+                I love traveling, nature & wildlife Photography, hiking, biking, and more.
+            </p>
+            </th>
+        </tr>
+    </table>
+</body>    
 </html>
