--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 Db2 on z/OS V7-V12, DB2 LUW V8-9, IMS DB, VSAM, Oracle<br>
 
                 <Strong>Programming Languages: </Strong>
-                COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML <br>
+                COBOL, JCL, REXX, CLIST, PLI, Assembler, XML, Java, C, C++, HTML, CSS, NodeJS <br>
 
                 <Strong>Middleware: </Strong>
                 MQ, CICS <br>
