--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Fruktur&family=Zen+Kurenaido&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"></script>
   <style>
   .fakeimg {
@@ -40,16 +43,6 @@ body {
 .column-33 {
   float: left;
   width: 33.33333%;
-  padding: 20px;
-}
-.column-45 {
-  float: left;
-  width: 66.6666%;
-  padding: 20px;
-}
-.column-75 {
-  float: left;
-  width: 33.3333%;
   padding: 20px;
 }
 
@@ -91,8 +84,8 @@ img {
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>Veena Puttalingaiah </h1>
-  <p>Dream as if you’ll live forever. Live as if you’ll die today. - James Dean</p>
+  <h1 style="font-family: 'Fruktur', cursive; font-size: 3em">Veena Puttalingaiah </h1>
+  <p style="font-family: 'Zen Kurenaido', sans-serif; font-size: 2em">Dream as if you’ll live forever. Live as if you’ll die today. - James Dean</p>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -137,13 +130,13 @@ img {
   <!-- Bio Section -->
   <div class="container" style="background-color:#f1f1f1">
     <div class="row">
-    <div class="column-45">
+    <div class="column-66">
     <div class="embed-responsive embed-responsive-21by9">
         <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/IVNm-AQGroc?rel=0" style="width: 40%; height: 40%; position: absolute;" allowfullscreen>
         </iframe> 
     </div>
     </div>
-      <div class="column-75">
+      <div class="column-33">
         <h1 class="xlarge-font"><b>Bio</b></h1>
         <p>I am a highly motivated Mainframe Specialist with 14+ years of experience in Application development, Database Administration, Infrastructure Engineering and Operations. A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results. </p>
         <a href="Bio.html"><button class="button" style="background-color:red"> Read More </button></a>
@@ -161,7 +154,7 @@ img {
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm border-primary">
                         <div class="card-header py-3 text-white bg-primary border-primary">
-                        <h4 class="my-0 fw-normal">Bouncing Ball</h4>
+                        <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Bouncing Ball</h4>
                       </div>
                       <div class="card-body">
                         <p>The ball bounces and changes direction at the boundaries.  </p>
@@ -174,7 +167,7 @@ img {
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-primary">
                     <div class="card-header py-3 text-white bg-primary border-primary">
-                    <h4 class="my-0 fw-normal">PacMan Exercise</h4>
+                    <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">PacMan Exercise</h4>
                   </div>
                   <div class="card-body">
                     <p>PacMan moves from one edge of the page to another. </p>
@@ -187,7 +180,7 @@ img {
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-primary">
                     <div class="card-header py-3 text-white bg-primary border-primary">
-                    <h4 class="my-0 fw-normal">Eye Exercise</h4>
+                    <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Eye Exercise</h4>
                   </div>
                   <div class="card-body">
                     <p>Eye exercise shows eye balls moving with the mouse. </p>
@@ -200,7 +193,7 @@ img {
               <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-primary">
                   <div class="card-header py-3 text-white bg-primary border-primary">
-                    <h4 class="my-0 fw-normal">Bus Tracker</h4>
+                    <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Bus Tracker</h4>
                   </div>
                   <div class="card-body">
                     <p>Tracks buses in real time for a given location.</p>
