updated bustracker project link

--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@ img {
                       </div>
                       <div class="card-body">
                         <p>The ball bounces and changes direction at the boundaries.  </p>
-                        <a href="https://github.com/Akankshvee/BounceBall"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                        <a target="_blank" href="https://github.com/Akankshvee/BounceBall"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
-                        <a href="https://akankshvee.github.io/BounceBall/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                        <a target="_blank" href="https://akankshvee.github.io/BounceBall/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                       </div>
                     </div>
                   </div>
@@ -171,9 +171,9 @@ img {
                   </div>
                   <div class="card-body">
                     <p>PacMan moves from one edge of the page to another. </p>
-                    <a href="https://github.com/Akankshvee/PacMan"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                    <a target="_blank" href="https://github.com/Akankshvee/PacMan"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
-                        <a href="https://akankshvee.github.io/PacMan/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                        <a target="_blank" href="https://akankshvee.github.io/PacMan/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
                 </div>
               </div>
@@ -184,9 +184,9 @@ img {
                   </div>
                   <div class="card-body">
                     <p>Eye exercise shows eye balls moving with the mouse. </p>
-                    <a href="https://github.com/Akankshvee/EyeExercise"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                    <a target="_blank" href="https://github.com/Akankshvee/EyeExercise"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
-                        <a href="https://akankshvee.github.io/EyeExercise/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                        <a target="_blank" href="https://akankshvee.github.io/EyeExercise/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
                 </div>
               </div>
@@ -197,9 +197,9 @@ img {
                   </div>
                   <div class="card-body">
                     <p>Tracks buses in real time for a given location.</p>
-                    <a href="https://github.com/Akankshvee/BounceBall"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                    <a target="_blank" href="https://github.com/Akankshvee/BusTracker"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
-                        <a href="https://akankshvee.github.io/BounceBall/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                        <a target="_blank" href="https://akankshvee.github.io/BusTracker/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
                 </div>
               </div>
