--- a/index.html
+++ b/index.html
@@ -207,10 +207,23 @@ img {
                     <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Todo App</h4>
                   </div>
                   <div class="card-body">
-                    <p>Track your to-do list every day.</p>
+                    <p>Track your to-do list every day using the Todo App.</p>
                     <a target="_blank" href="https://github.com/Akankshvee/TodoApp"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
                         <a target="_blank" href="https://akankshvee.github.io/TodoApp/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                  <div class="card-header py-3 text-white bg-primary border-primary">
+                    <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">ATM Machine</h4>
+                  </div>
+                  <div class="card-body">
+                    <p>ATM app to check balance, deposit and withdraw money.</p>
+                    <a target="_blank" href="https://github.com/Akankshvee/ATMMachine"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                        <p></p>
+                        <a target="_blank" href="https://akankshvee.github.io/ATMMachine/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
                 </div>
               </div>
