--- a/index.html
+++ b/index.html
@@ -227,6 +227,19 @@ img {
                   </div>
                 </div>
               </div>
+              <div class="col">
+                <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                  <div class="card-header py-3 text-white bg-primary border-primary">
+                    <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Read Poems</h4>
+                  </div>
+                  <div class="card-body">
+                    <p>Find & read your favorite poems by author.</p>
+                    <a target="_blank" href="https://github.com/Akankshvee/FetchPoems"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                        <p></p>
+                        <a target="_blank" href="https://akankshvee.github.io/FetchPoems/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                  </div>
+                </div>
+              </div>
             </div>
         
       </div>
