Adding bad-bank application

--- a/index.html
+++ b/index.html
@@ -267,6 +267,20 @@ img {
                 </div>
               </div>
             </div>
+            <div class="col">
+              <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                <div class="card-header py-3 text-white bg-primary border-primary">
+                  <h4 class="my-0 fw-normal" style="font-family: 'Ceviche One', cursive; font-size: 2em;">Bad Bank</h4>
+                </div>
+                <div class="card-body">
+                  <p>Bad bank demonstrates usage of react, express, mongo.</p>
+                  <a target="_blank" href="https://github.com/Akankshvee/Bad-Bank"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                      <p></p>
+                      <a target="_blank" href="https://github.com/Akankshvee/Bad-Bank/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                </div>
+              </div>
+            </div>
+          </div>
         
       </div>
     </div>
