--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ img {
                   </div>
                   <div class="card-body">
                     <p>This is a demo application for shopping cart.</p>
-                    <a target="_blank" href="https://akankshvee.github.io/shoppingcart"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
+                    <a target="_blank" href="https://github.com/Akankshvee/shoppingcart"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
                         <a target="_blank" href="https://akankshvee.github.io/shoppingcart/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
@@ -276,7 +276,7 @@ img {
                     <p>Bad bank demonstrates usage of react, express, mongo.</p>
                     <a target="_blank" href="https://github.com/Akankshvee/Bad-Bank"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Git Repo</button></a>
                         <p></p>
-                        <a target="_blank" href="https://github.com/Akankshvee/Bad-Bank/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
+                        <a target="_blank" href="http://veena-puttafullstackbankingapp.herokuapp.com/"><button type="button" class="w-100 btn btn-lg btn-outline-primary">Live Project</button></a>
                   </div>
                 </div>
               </div>
