--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ img {
   <div class="container" style="background-color:#f1f1f1">
     <div class="row">
        <h1 class="xlarge-font"><b>Bio</b></h1>
-        <p>I am a highly motivated Mainframe Specialist with 14+ years of experience in Application development, Database Administration, Infrastructure Engineering and Operations. A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results. </p>
+        <p>I am a highly motivated Mainframe Specialist with 17+ years of experience in Devops, Application development, Database Administration, Infrastructure Engineering and Operations. A continuous learner who is passionate and committed to the organizational growth and focused on delivering exceptional results. </p>
         <a href="Bio.html"><button class="button" style="background-color:red"> Read More </button></a>
     </div>
   </div>
